# sample

./: CMakeLists.txt  CMakePresets.json  Jenkinsfile
.github/workflows/: cmake-single-platform.yml
src/: version.h
test/: test.cpp
